--- a/bodylotion.html
+++ b/bodylotion.html
@@ -43,23 +43,50 @@
                     <div id="carouselSingleProduk" class="carousel slide d-sm-blok mx-auto" data-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                              <a href="">
+                              <a href="" data-toggle="modal" data-target="#bodylotion_charming">
                                   <img src="assets/img/Produk/singleproduk/bodylotion_charming.png" class="d-block w-100" width="100%" alt="Responsive Image">
                               </a>
                           </div>
                           <div class="carousel-item">
-                              <a href="">
+                              <a href="" data-toggle="modal" data-target="#bodylotion_fantasia">
                                   <img src="assets/img/Produk/singleproduk/bodylotion_fantasia.png" class="d-block w-100" width="100%" alt="Responsive Image">
                               </a>
                           </div>
                           <div class="carousel-item">
-                              <a href="">
+                              <a href="" data-toggle="modal" data-target="#bodylotion_romansa">
                                   <img src="assets/img/Produk/singleproduk/bodylotion_romansa.png" class="d-block w-100" width="100%" alt="Responsive Image">
                               </a>
                           </div>
                         </div>
                       </div>
                 </div>
+                <div class="modal fade" id="bodylotion_charming" tabindex="-1" role="dialog" aria-labelledby="bodylotion_charmingLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-lg">
+                      <div class="modal-content">
+                          <div class="modal-body">
+                              <img src="assets/img/Produk/singleproduk/bodylotion_charming.png" width="100%" alt="">
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+                <div class="modal fade" id="bodylotion_fantasia" tabindex="-1" role="dialog" aria-labelledby="bodylotion_fantasiaLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-lg">
+                      <div class="modal-content">
+                          <div class="modal-body">
+                              <img src="assets/img/Produk/singleproduk/bodylotion_fantasia.png" width="100%" alt="">
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+                <div class="modal fade" id="bodylotion_romansa" tabindex="-1" role="dialog" aria-labelledby="bodylotion_romansaLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-lg">
+                      <div class="modal-content">
+                          <div class="modal-body">
+                              <img src="assets/img/Produk/singleproduk/bodylotion_romansa.png" width="100%" alt="">
+                          </div>
+                      </div>
+                    </div>
+                  </div>
                 <div class="col-lg-6 col-12">
                     <h3 class="mt-3">Scarlett Whitening Body Lotion</h3>
                     <p>Stok: 14pcs | 12 Terjual</p>
