--- a/bodylotion.html
+++ b/bodylotion.html
@@ -43,46 +43,49 @@
                     <div id="carouselSingleProduk" class="carousel slide d-sm-blok mx-auto" data-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                              <a href="" data-toggle="modal" data-target="#bodylotion_charming">
+                              <a href="" data-toggle="modal" data-target="#bodylotion">
                                   <img src="assets/img/Produk/singleproduk/bodylotion_charming.png" class="d-block w-100" width="100%" alt="Responsive Image">
                               </a>
                           </div>
                           <div class="carousel-item">
-                              <a href="" data-toggle="modal" data-target="#bodylotion_fantasia">
+                              <a href="" data-toggle="modal" data-target="#bodylotion">
                                   <img src="assets/img/Produk/singleproduk/bodylotion_fantasia.png" class="d-block w-100" width="100%" alt="Responsive Image">
                               </a>
                           </div>
                           <div class="carousel-item">
-                              <a href="" data-toggle="modal" data-target="#bodylotion_romansa">
+                              <a href="" data-toggle="modal" data-target="#bodylotion">
                                   <img src="assets/img/Produk/singleproduk/bodylotion_romansa.png" class="d-block w-100" width="100%" alt="Responsive Image">
                               </a>
                           </div>
                         </div>
                       </div>
                 </div>
-                <div class="modal fade" id="bodylotion_charming" tabindex="-1" role="dialog" aria-labelledby="bodylotion_charmingLabel" aria-hidden="true">
+                <div class="modal fade" id="bodylotion" tabindex="-1" role="dialog" aria-labelledby="bodylotion_charmingLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered modal-lg">
                       <div class="modal-content">
                           <div class="modal-body">
-                              <img src="assets/img/Produk/singleproduk/bodylotion_charming.png" width="100%" alt="">
-                          </div>
-                      </div>
-                    </div>
-                  </div>
-                <div class="modal fade" id="bodylotion_fantasia" tabindex="-1" role="dialog" aria-labelledby="bodylotion_fantasiaLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered modal-lg">
-                      <div class="modal-content">
-                          <div class="modal-body">
-                              <img src="assets/img/Produk/singleproduk/bodylotion_fantasia.png" width="100%" alt="">
-                          </div>
-                      </div>
-                    </div>
-                  </div>
-                <div class="modal fade" id="bodylotion_romansa" tabindex="-1" role="dialog" aria-labelledby="bodylotion_romansaLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered modal-lg">
-                      <div class="modal-content">
-                          <div class="modal-body">
-                              <img src="assets/img/Produk/singleproduk/bodylotion_romansa.png" width="100%" alt="">
+                            <div id="carouselModalBodyLotion" class="carousel slide" style="width: 100%;" data-ride="carousel">
+                                <div class="carousel-inner">
+                                  <div class="carousel-item active">
+                                    <img src="assets/img/Produk/singleproduk/bodylotion_charming.png" class="d-block w-100" width="100%" alt="...">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="assets/img/Produk/singleproduk/bodylotion_fantasia.png" class="d-block w-100" width="100%" alt="...">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="assets/img/Produk/singleproduk/bodylotion_romansa.png" class="d-block w-100" width="100%" alt="...">
+                                  </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselModalBodyLotion" role="button" data-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselModalBodyLotion" role="button" data-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Next</span>
+                                </a>
+                              </div>
+
                           </div>
                       </div>
                     </div>
