test shopee link

--- a/bodylotion.html
+++ b/bodylotion.html
@@ -39,7 +39,7 @@
     <section class="single-produk">
         <div class="container .container-top">
             <div class="row justify-content-center">
-                <div class="col-lg-6 col-12">
+                <div class="col-lg-6 col-12 left-side">
                     <div id="carouselSingleProduk" class="carousel slide d-sm-blok mx-auto" data-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
@@ -90,8 +90,8 @@
                       </div>
                     </div>
                   </div>
-                <div class="col-lg-6 col-12">
-                    <h3 class="mt-3">Scarlett Whitening Body Lotion</h3>
+                <div class="col-lg-6 col-12 right-side">
+                    <h3 class="mt-3">Scarlett Whitening by Felicya Body Lotion</h3>
                     <p>Stok: 14pcs | 12 Terjual</p>
                     <h1>Rp. 70.000</h1>
                     <br>
@@ -111,9 +111,11 @@
                         </div>
                     </div>
                     <p>Order?</p>
-                    <a href="" class="btn btn-success btn-sm d-flex whatsapp">
-                        <i class="fab fa-whatsapp mx-2 mt-2"></i>
-                       <p>0812 1959 0668</p>
+                    <a href="http://wa.me/6288211723419" class="btn btn-outline-success">
+                       <i class="fab fa-whatsapp"></i> 0812 1959 0668
+                    </a>
+                    <a href="https://shopee.co.id/product/221848149/7435916602?smtt=0.0.9" class="btn shopee">
+                      Shopee
                     </a>
                 </div>
             </div>
