--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <a href="https://www.instagram.com/scarlettbyfeli.bekasi/?hl=id">
           <img src="assets/img/ig.png">
         </a>
+        <a href="https://shopee.co.id/fahlevi999">
+        <img src="assets/img/shopee.png" width="40px"></a>
       </div>
     </nav>
 
@@ -92,7 +94,7 @@
           </div>
         </div>
         <div class="row justify-content-center mb-5 p-2">
-          <div class="col-lg-2 col-md-6 col-6 card-produk">
+          <div class="col-lg-2 col-md-4 col-6 card-produk">
             <a href="bodylotion.html">
               <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
               <p>Scarlett Whitening Body Lotion</p>
@@ -100,7 +102,7 @@
               <p class="text-muted">12 Terjual</p>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-6 card-produk">
+          <div class="col-lg-2 col-md-4 col-6 card-produk">
             <a href="">
               <img src="assets/img/Produk/ShowerScrub.png" width="150px" class="d-block mx-auto mt-2">
               <p>Scarlett Whitening Shower Scrub</p>
@@ -108,7 +110,7 @@
               <p class="text-muted">12 Terjual</p>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-6 card-produk">
+          <div class="col-lg-2 col-md-4 col-6 card-produk">
             <a href="">
               <img src="assets/img/Produk/BodyScrub.png" width="150px" class="d-block mx-auto mt-2">
               <p>Scarlett Whitening Body Scrub</p>
@@ -116,7 +118,7 @@
               <p class="text-muted">12 Terjual</p>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-6 card-produk">
+          <div class="col-lg-2 col-md-4 col-6 card-produk">
             <a href="">
               <img src="assets/img/Produk/FacialWash.png" width="150px" class="d-block mx-auto mt-2">
               <p>Scarlett Whitening Facial Wash</p>
@@ -124,7 +126,7 @@
               <p class="text-muted">12 Terjual</p>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-6 card-produk">
+          <div class="col-lg-2 col-md-4 col-6 card-produk">
             <a href="">
               <img src="assets/img/Produk/Paket5.png" width="150px" class="d-block mx-auto mt-2">
               <p>Scarlett Whitening Paket Hemat 5 Item</p>
@@ -132,7 +134,7 @@
               <p class="text-muted">12 Terjual</p>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-6 card-produk">
+          <div class="col-lg-2 col-md-4 col-6 card-produk">
             <a href="">
               <img src="assets/img/Produk/paket12@2x.png" width="150px" class="d-block mx-auto mt-2">
               <p>Scarlett Whitening Paket Reseller 12 Botol</p>
@@ -140,7 +142,7 @@
               <p class="text-muted">12 Terjual</p>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-6 card-produk">
+          <div class="col-lg-2 col-md-4 col-6 card-produk">
             <a href="">
               <img src="assets/img/Produk/paket24@2x.png" width="150px" class="d-block mx-auto mt-2">
               <p>Scarlett Whitening Paket Reseller 24 Botol</p>
@@ -148,7 +150,7 @@
               <p class="text-muted">12 Terjual</p>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-6 card-produk">
+          <div class="col-lg-2 col-md-4 col-6 card-produk">
             <a href="">
               <img src="assets/img/Produk/paket48@2x.png" width="150px" class="d-block mx-auto mt-2">
               <p>Scarlett Whitening Paket Reseller 48 Botol</p>
