test shopee link2

--- a/bodylotion.html
+++ b/bodylotion.html
@@ -114,7 +114,7 @@
                     <a href="http://wa.me/6288211723419" class="btn btn-outline-success">
                        <i class="fab fa-whatsapp"></i> 0812 1959 0668
                     </a>
-                    <a href="https://shopee.co.id/product/221848149/7435916602?smtt=0.0.9" class="btn shopee">
+                    <a href="https://shopee.co.id/product/221848149/7435916602?smtt=0.0.9" target="_blank" class="btn shopee">
                       Shopee
                     </a>
                 </div>
