--- a/bodylotion.html
+++ b/bodylotion.html
@@ -145,13 +145,13 @@
       </div>
       <div class="row follow">
         <div class="col-12 d-flex justify-content-center">
-          <a href="" style="color: white;">
+          <a href="https://shopee.co.id/fahlevi999" style="color: white;">
             <p> <i class="fab fa-shopify"></i> Shopee</p>
           </a>
-          <a href="" class="mx-3" style="color: white;">
+          <a href="http://wa.me/6288211723419" class="mx-3" style="color: white;">
             <p><i class="fab fa-whatsapp"></i> Whatsapp</p>
           </a>
-          <a href="" style="color: white;">
+          <a href="https://www.instagram.com/scarlettbyfeli.bekasi/?hl=id" style="color: white;">
             <p><i class="fab fa-instagram"></i> Instagram</p>
           </a>
         </div>
