--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="col-lg-2 col-md-4 col-6 card-produk">
             <a href="bodylotion.html">
               <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
-              <p>Scarlett Whitening Body Lotion</p>
+              <p>Scarlett Whitening by Felicya Body Lotion</p>
               <h5>Rp.70.000</h5>
               <p class="text-muted">12 Terjual</p>
             </a>
@@ -105,7 +105,7 @@
           <div class="col-lg-2 col-md-4 col-6 card-produk">
             <a href="">
               <img src="assets/img/Produk/ShowerScrub.png" width="150px" class="d-block mx-auto mt-2">
-              <p>Scarlett Whitening Shower Scrub</p>
+              <p>Scarlett Whitening by Felicya Shower Scrub</p>
               <h5>Rp.70.000</h5>
               <p class="text-muted">12 Terjual</p>
             </a>
@@ -113,7 +113,7 @@
           <div class="col-lg-2 col-md-4 col-6 card-produk">
             <a href="">
               <img src="assets/img/Produk/BodyScrub.png" width="150px" class="d-block mx-auto mt-2">
-              <p>Scarlett Whitening Body Scrub</p>
+              <p>Scarlett Whitening by Felicya Body Scrub</p>
               <h5>Rp.70.000</h5>
               <p class="text-muted">12 Terjual</p>
             </a>
@@ -121,7 +121,7 @@
           <div class="col-lg-2 col-md-4 col-6 card-produk">
             <a href="">
               <img src="assets/img/Produk/FacialWash.png" width="150px" class="d-block mx-auto mt-2">
-              <p>Scarlett Whitening Facial Wash</p>
+              <p>Scarlett Whitening by Felicya Facial Wash</p>
               <h5>Rp.70.000</h5>
               <p class="text-muted">12 Terjual</p>
             </a>
@@ -129,7 +129,7 @@
           <div class="col-lg-2 col-md-4 col-6 card-produk">
             <a href="">
               <img src="assets/img/Produk/Paket5.png" width="150px" class="d-block mx-auto mt-2">
-              <p>Scarlett Whitening Paket Hemat 5 Item</p>
+              <p>Scarlett Whitening by Felicya Paket Hemat 5 Item</p>
               <h5> <span class="text-muted" style="text-decoration: line-through;"> <small>Rp. 350.000</small> </span> Rp.300.000</h5>
               <p class="text-muted">12 Terjual</p>
             </a>
@@ -137,7 +137,7 @@
           <div class="col-lg-2 col-md-4 col-6 card-produk">
             <a href="">
               <img src="assets/img/Produk/paket12@2x.png" width="150px" class="d-block mx-auto mt-2">
-              <p>Scarlett Whitening Paket Reseller 12 Botol</p>
+              <p>Scarlett Whitening By Felicya Paket Reseller 12 Botol</p>
               <h5> <span class="text-muted" style="text-decoration: line-through;"> <small>Rp. 840.000</small> </span> Rp.700.000</h5>
               <p class="text-muted">12 Terjual</p>
             </a>
@@ -145,7 +145,7 @@
           <div class="col-lg-2 col-md-4 col-6 card-produk">
             <a href="">
               <img src="assets/img/Produk/paket24@2x.png" width="150px" class="d-block mx-auto mt-2">
-              <p>Scarlett Whitening Paket Reseller 24 Botol</p>
+              <p>Scarlett Whitening By Felicya Paket Reseller 24 Botol</p>
               <h5> <span class="text-muted" style="text-decoration: line-through;"> <small>Rp. 1.680.000</small> </span> Rp.1.440.000</h5>
               <p class="text-muted">12 Terjual</p>
             </a>
@@ -153,7 +153,7 @@
           <div class="col-lg-2 col-md-4 col-6 card-produk">
             <a href="">
               <img src="assets/img/Produk/paket48@2x.png" width="150px" class="d-block mx-auto mt-2">
-              <p>Scarlett Whitening Paket Reseller 48 Botol</p>
+              <p>Scarlett Whitening By Felicya Paket Reseller 48 Botol</p>
               <h5> <span class="text-muted" style="text-decoration: line-through;"> <small>Rp. 3.360.000</small> </span> Rp.2.784.000</h5>
               <p class="text-muted">12 Terjual</p>
             </a>
@@ -184,13 +184,13 @@
       </div>
       <div class="row follow">
         <div class="col-12 d-flex justify-content-center">
-          <a href="">
+          <a href="https://shopee.co.id/fahlevi999">
             <p> <i class="fab fa-shopify"></i> Shopee</p>
           </a>
-          <a href="" class="mx-3">
+          <a href="http://wa.me/6288211723419" class="mx-3">
             <p><i class="fab fa-whatsapp"></i> Whatsapp</p>
           </a>
-          <a href="">
+          <a href="https://www.instagram.com/scarlettbyfeli.bekasi/?hl=id">
             <p><i class="fab fa-instagram"></i> Instagram</p>
           </a>
         </div>
