finish body lotion

--- a/bodylotion.html
+++ b/bodylotion.html
@@ -112,13 +112,36 @@
                     </div>
                     <p>Order?</p>
                     <a href="http://wa.me/6288211723419" class="btn btn-outline-success">
-                       <i class="fab fa-whatsapp"></i> 0812 1959 0668
+                       <i class="fab fa-whatsapp"></i> 0882 1172 3419
                     </a>
                     <a href="https://shopee.co.id/product/221848149/7435916602?smtt=0.0.9" target="_blank" class="btn shopee">
                       Shopee
                     </a>
                 </div>
             </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <h5 class="p-2">Deskripsi Produk</h5>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <p class="p-4">Kami RESELLER RESMI Scarlett Whitening by Felicya yang berada di BEKASI.
+                  <br>
+                  <br>
+                  Whitening Body Lotion <br>
+                  Tersedia Varian <br>
+                  - Romansa <br>
+                  - Fantasia <br>
+                  - Charming <br>
+                  <br>
+                  MOHON TULIS VARIAN YG DI INGINKAN DI CATATAN UNTUK PENJUAL ATAU MELALUI CHAT, TIDAK TULIS = KAMI KIRIM SECARA RANDOM! <br>
+                  <br>
+                  Dapat mencerahkan kulit tubuhmu dengan cepat (dapat dilihat perbedaannya hanya dalam pemakaian pertama) mengandung glutathione dan vitamin E yang sangat bagus untuk mencerahkan kulit tubuh</p>                
+              </div>
+            </div>
+          </div>
         </div>
     </section>
 
