--- a/bodylotion.html
+++ b/bodylotion.html
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <p>Order?</p>
-                    <a href="http://wa.me/6288211723419" class="btn btn-outline-success">
+                    <a href="http://wa.me/6288211723419" class="btn btn-outline-success whatsapp">
                        <i class="fab fa-whatsapp"></i> 0882 1172 3419
                     </a>
                     <a href="https://shopee.co.id/product/221848149/7435916602?smtt=0.0.9" target="_blank" class="btn shopee">
