update shower scrub

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </a>
           </div>
           <div class="col-lg-2 col-md-4 col-6 card-produk">
-            <a href="">
+            <a href="showerscrub.html">
               <img src="assets/img/Produk/ShowerScrub.png" width="150px" class="d-block mx-auto mt-2">
               <p>Scarlett Whitening by Felicya Shower Scrub</p>
               <h5>Rp.70.000</h5>
