--- a/showerscrub.html
+++ b/showerscrub.html
@@ -43,44 +43,44 @@
                     <div id="carouselSingleProduk" class="carousel slide d-sm-blok mx-auto" data-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                              <a href="" data-toggle="modal" data-target="#bodylotion">
-                                  <img src="assets/img/Produk/singleproduk/bodylotion_charming.png" class="d-block w-100" width="100%" alt="Responsive Image">
+                              <a href="" data-toggle="modal" data-target="#ShowerScrub">
+                                  <img src="assets/img/Produk/singleproduk/showerscrub_pomegrente.png" class="d-block w-100" width="100%" alt="Responsive Image">
                               </a>
                           </div>
                           <div class="carousel-item">
-                              <a href="" data-toggle="modal" data-target="#bodylotion">
-                                  <img src="assets/img/Produk/singleproduk/bodylotion_fantasia.png" class="d-block w-100" width="100%" alt="Responsive Image">
+                              <a href="" data-toggle="modal" data-target="#ShowerScrub">
+                                  <img src="assets/img/Produk/singleproduk/showerscrub_mango.png" class="d-block w-100" width="100%" alt="Responsive Image">
                               </a>
                           </div>
                           <div class="carousel-item">
-                              <a href="" data-toggle="modal" data-target="#bodylotion">
-                                  <img src="assets/img/Produk/singleproduk/bodylotion_romansa.png" class="d-block w-100" width="100%" alt="Responsive Image">
+                              <a href="" data-toggle="modal" data-target="#ShowerScrub">
+                                  <img src="assets/img/Produk/singleproduk/showerscrub_cucumber.jpg" class="d-block w-100" width="100%" alt="Responsive Image">
                               </a>
                           </div>
                         </div>
                       </div>
                 </div>
-                <div class="modal fade" id="bodylotion" tabindex="-1" role="dialog" aria-labelledby="bodylotion_charmingLabel" aria-hidden="true">
+                <div class="modal fade" id="ShowerScrub" tabindex="-1" role="dialog" aria-labelledby="ShowerScrub_charmingLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered modal-lg">
                       <div class="modal-content">
                           <div class="modal-body">
-                            <div id="carouselModalBodyLotion" class="carousel slide" style="width: 100%;" data-ride="carousel">
+                            <div id="carouselModalShowerScrub" class="carousel slide" style="width: 100%;" data-ride="carousel">
                                 <div class="carousel-inner">
                                   <div class="carousel-item active">
-                                    <img src="assets/img/Produk/singleproduk/bodylotion_charming.png" class="d-block w-100" width="100%" alt="...">
+                                    <img src="assets/img/Produk/singleproduk/showerscrub_pomegrente.png" class="d-block w-100" width="100%" alt="...">
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="assets/img/Produk/singleproduk/bodylotion_fantasia.png" class="d-block w-100" width="100%" alt="...">
+                                    <img src="assets/img/Produk/singleproduk/showerscrub_mango.png" class="d-block w-100" width="100%" alt="...">
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="assets/img/Produk/singleproduk/bodylotion_romansa.png" class="d-block w-100" width="100%" alt="...">
+                                    <img src="assets/img/Produk/singleproduk/showerscrub_cucumber.jpg" class="d-block w-100" width="100%" alt="...">
                                   </div>
                                 </div>
-                                <a class="carousel-control-prev" href="#carouselModalBodyLotion" role="button" data-slide="prev">
+                                <a class="carousel-control-prev" href="#carouselModalShowerScrub" role="button" data-slide="prev">
                                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                   <span class="sr-only">Previous</span>
                                 </a>
-                                <a class="carousel-control-next" href="#carouselModalBodyLotion" role="button" data-slide="next">
+                                <a class="carousel-control-next" href="#carouselModalShowerScrub" role="button" data-slide="next">
                                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                   <span class="sr-only">Next</span>
                                 </a>
@@ -91,7 +91,7 @@
                     </div>
                   </div>
                 <div class="col-lg-6 col-12 right-side">
-                    <h3 class="mt-3">Scarlett Whitening by Felicya Body Lotion</h3>
+                    <h3 class="mt-3">Scarlett Whitening by Felicya Shower Scrub</h3>
                     <p class="text-success">Reseller Resmi</p>
                     <h1>Rp. 70.000</h1>
                     <br>
@@ -114,7 +114,7 @@
                     <a href="http://wa.me/6288211723419" class="btn btn-outline-success whatsapp">
                        <i class="fab fa-whatsapp"></i> 0882 1172 3419
                     </a>
-                    <a href="https://shopee.co.id/product/221848149/7435916602?smtt=0.0.9" target="_blank" class="btn shopee">
+                    <a href="https://shopee.co.id/product/221848149/6135950072?smtt=0.0.9" target="_blank" class="btn shopee">
                       Shopee
                     </a>
                 </div>
@@ -127,18 +127,18 @@
             </div>
             <div class="row">
               <div class="col-12">
-                <p class="p-4">Kami RESELLER RESMI Scarlett Whitening by Felicya yang berada di BEKASI.
-                  <br>
-                  <br>
-                  Whitening Body Lotion <br>
-                  Tersedia Varian <br>
-                  - Romansa <br>
-                  - Fantasia <br>
-                  - Charming <br>
-                  <br>
-                  MOHON TULIS VARIAN YG DI INGINKAN DI CATATAN UNTUK PENJUAL ATAU MELALUI CHAT, TIDAK TULIS = KAMI KIRIM SECARA RANDOM! <br>
-                  <br>
-                  Dapat mencerahkan kulit tubuhmu dengan cepat (dapat dilihat perbedaannya hanya dalam pemakaian pertama) mengandung glutathione dan vitamin E yang sangat bagus untuk mencerahkan kulit tubuh</p>                
+                <p class="p-4">Kami RESELLER RESMI Scarlett Whitening by Felicya yang berada di BEKASI. <br>
+                    <br>
+                    Whitening Shower Scrub <br>
+                    Tersedia Varian <br>
+                    - Pomegranate <br>
+                    - Mango (KOSONG) <br>
+                    - Cucumber <br>
+                    <br>
+                    MOHON TULIS VARIAN YG DI INGINKAN DI CATATAN UNTUK PENJUAL ATAU MELALUI CHAT, TIDAK TULIS = KAMI KIRIM SECARA RANDOM!
+                    <br>
+                    <br>
+                    Dibuat khusus untuk kamu yang ingin mencerahkan kulit tubuh, mengandung Glutathione (vitamin pencerah kulit paling cepat di dunia) dan butiran Vitamin E. Juga terdapat butiran scrub yang mampu mengangkat sel kulit mati dan kotoran yang menumpuk di kulit tubuhmu.</p>                
               </div>
             </div>
           </div>
