--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="lightbox2-2.11.1/src/css/lightbox.css">
 
 
-    <title>SCARLETT WHITENING BEKASI</title>
+    <title>Scarlett and Beauty Care</title>
   </head>
   <body>
     <!-- <nav class="navbar navbar-expand-lg navbar-light sticky-top">
