--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                       <p class="caption">Dibuat dengan beberapa variant yaitu Pomegrante, Mango dan Cucumber. Dibuat khusus untuk kamu yang ingin mencerahkan kulit tubuh, mengandung Glutathione (vitamin pencerah kulit paling cepat di dunia) dan butiran Vitamin E. Juga terdapat butiran scrub yang mampu mengangkat sel kulit mati dan kotoran yang menumpuk di kulit tubuhmu.
                       </p>
         
-                      <button class="btn btn-produk mb-5">Lihat Katalog</button>
+                      <button class="btn btn-produk mb-5 page-scroll">Lihat Katalog</button>
                     </div>
                   </div>
                 </div>
@@ -288,7 +288,7 @@
                       <p class="caption">Dibuat dengan beberapa variant yaitu Pomegrante, Mango dan Cucumber. Dibuat khusus untuk kamu yang ingin mencerahkan kulit tubuh, mengandung Glutathione (vitamin pencerah kulit paling cepat di dunia) dan butiran Vitamin E. Juga terdapat butiran scrub yang mampu mengangkat sel kulit mati dan kotoran yang menumpuk di kulit tubuhmu.
                       </p>
 
-                      <button class="btn btn-produk mb-5 d-block ml-auto">Lihat Katalog</button>
+                      <a href="#e-katalog" class="btn btn-produk mb-5 d-block ml-auto page-scroll">Lihat Katalog</a>
                     </div>
                     <div class="col-lg-6 col-md-12">
                       <img src="assets/img/Produk/body-lotion.jpeg" alt="Image Responsive" class="img-fluid main-img">
@@ -305,7 +305,7 @@
                       <p class="caption">Dibuat dengan beberapa variant yaitu Pomegrante, Mango dan Cucumber. Dibuat khusus untuk kamu yang ingin mencerahkan kulit tubuh, mengandung Glutathione (vitamin pencerah kulit paling cepat di dunia) dan butiran Vitamin E. Juga terdapat butiran scrub yang mampu mengangkat sel kulit mati dan kotoran yang menumpuk di kulit tubuhmu.
                       </p>
 
-                      <button class="btn btn-produk mb-5">Lihat Katalog</button>
+                      <a href="#e-katalog" class="btn btn-produk mb-5 page-scroll">Lihat Katalog</a>
                     </div>
                   </div>                
                 </div>
@@ -316,7 +316,7 @@
                       <p class="caption">Dibuat dengan beberapa variant yaitu Pomegrante, Mango dan Cucumber. Dibuat khusus untuk kamu yang ingin mencerahkan kulit tubuh, mengandung Glutathione (vitamin pencerah kulit paling cepat di dunia) dan butiran Vitamin E. Juga terdapat butiran scrub yang mampu mengangkat sel kulit mati dan kotoran yang menumpuk di kulit tubuhmu.
                       </p>
 
-                      <button class="btn btn-produk mb-5 d-block ml-auto">Lihat Katalog</button>
+                      <a href="#e-katalog" class="btn btn-produk mb-5 d-block ml-auto page-scroll">Lihat Katalog</a>
                     </div>
                       <div class="col-lg-6 col-md-12">
                         <img src="assets/img/Produk/facial-wash.jpeg" alt="Image Responsive" class="img-fluid main-img">
